Add "Add-Exports" case for the setAccessibleNonPublicMemberNonExportedPackage test